gotta some work to do but inserting roles and claims for now.

--- a/src/Web/AutoPartsApp.csproj
+++ b/src/Web/AutoPartsApp.csproj
@@ -25,8 +25,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Models\UserRole\" />
+    <Folder Include="Models\Role\Response\" />
+    <Folder Include="Models\Role\Request\" />
     <Folder Include="Models\User\Response\" />
-    <Folder Include="Viewmodel\" />
   </ItemGroup>
 
   <ItemGroup>
